--- a/styles.css
+++ b/styles.css
@@ -443,8 +443,7 @@
     left: 0;
     background: var(--backdrop-image) var(--backdrop-position)/var(--backdrop-size) var(--backdrop-repeat) var(--backdrop-attachment);
     filter: grayscale(var(--backdrop-grayscale)) sepia(var(--backdrop-sepia)) invert(var(--backdrop-invert)) brightness(var(--backdrop-brightness)) contrast(var(--backdrop-contrast)) saturate(var(--backdrop-saturation)) blur(var(--backdrop-blur));
-    pointer-events: none;
-    transform: scaleX(-1)
+    pointer-events: none
 }
 
 .backdrop-2ByYRN:after {
