--- a/styles.css
+++ b/styles.css
@@ -454,11 +454,13 @@
     right: 0;
     bottom: 0;
     left: 0;
+    transform: scaleX(-1);
     background: var(--backdrop-overlay);
     pointer-events: none
 }
 
 .loading-1yrGTe {
+    transform: scaleX(-1);
     background-color: rgba(0, 0, 0, 0)
 }
 
